# AI_solo_coder_task_B_048

./: docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  config.toml
backend/crates/groundwater/: Cargo.toml
backend/crates/groundwater/src/: lib.rs  modflow_simple.rs  redis_queue.rs
backend/crates/heritage-vulnerability/: Cargo.toml
backend/crates/heritage-vulnerability/src/: fuzzy_index.rs  lib.rs
backend/crates/microbiome/: Cargo.toml
backend/crates/microbiome/src/: lib.rs  microbiome_data.rs  random_forest.rs
backend/crates/protection-penetration/: Cargo.toml
backend/crates/protection-penetration/src/: fick_diffusion.rs  lib.rs  thread_pool.rs
backend/src/: corrosion_algorithm.rs  handlers.rs  lora_gateway.rs  main.rs  metrics.rs  models.rs  nn_model.rs
backend/src/alert_broker/: mod.rs  service.rs
backend/src/common/: config.rs  error.rs  mod.rs  models.rs
backend/src/corrosion_engine/: lpr.rs  mod.rs  predictor.rs  stability.rs
backend/src/groundwater/: chloride_transport.rs  mod.rs  modflow_simple.rs
backend/src/heritage_vulnerability/: eds_data.rs  fuzzy_index.rs  mod.rs
backend/src/ingress/: gateway.rs  handler.rs  mod.rs
backend/src/microbiome/: microbiome_data.rs  mod.rs  random_forest.rs
backend/src/protection_penetration/: fick_diffusion.rs  materials.rs  mod.rs
backend/src/storage/: mod.rs  reader.rs  writer.rs
frontend/: index.html
frontend/css/: style.css
frontend/js/: CorrosionPanel.js  GroundwaterPanel.js  MapView.js  MicrobiomePanel.js  ProtectionPanel.js  VulnerabilityPanel.js  app.js
influxdb/: docker-compose.yml  downsample.flux  init.iql
lora-simulator/: Cargo.toml  Dockerfile
lora-simulator/src/: main.rs
nginx/: Dockerfile  Dockerfile.simple  nginx.conf  nginx.conf.template
prometheus/: prometheus.yml
