[package]
name = "corrosion-monitor-backend"
version = "3.0.0"
edition = "2021"
description = "古代战地医院遗址微环境与出土医疗器具腐蚀监测系统 - 后端服务"

[workspace]
members = [
    "crates/heritage-vulnerability",
    "crates/protection-penetration",
    "crates/microbiome",
    "crates/groundwater",
]

[dependencies]
heritage-vulnerability = { path = "crates/heritage-vulnerability" }
protection-penetration = { path = "crates/protection-penetration" }
microbiome = { path = "crates/microbiome" }
groundwater = { path = "crates/groundwater" }
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
influxdb = { version = "0.7", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
