[package]
name = "lora-simulator"
version = "1.0.0"
edition = "2021"
description = "古代战地医院遗址腐蚀监测系统 - LoRa数据模拟器"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }

[profile.release]
opt-level = 3
